--- a/pathways-of-life.html
+++ b/pathways-of-life.html
@@ -17,26 +17,24 @@ heading:
     type: youtube
     text: Watch the video
     url: 
-  background_image: /uploads/images/women-who-feel-8.jpg
+  background_image: /uploads/images/pathways-of-life-1.jpg
   overlay_style: medium
 course-description:
+  background_image: /uploads/images/pathways-of-life-2.png
   description_html: >-
-    <p>Being human is complicated. And it seems to just be getting more and more complicated.</p>
-    <p>We have so many choices on who, what, and how, we can be, what we should believe, and who we should belong to…</p>
-    <p>Choices that will hopefully result in actually being happy and satisfied with life?</p>
-    <p class="mb-0">What do we choose that will ensure that we can move through life feeling safe and secure, and authentic and free?</p>
+    <p>We are energy expressing itself through the physical body. This is our life force energy and our innate source of power. This abundant, never-ending source of energy flows through us in non-linear pathways of circles, spirals, waves, also known as the FEMININE PATHWAYS.</p>
+    <p>The very same patterns can be observed in nature, from subatomic to electrical bodies, proving that the same patterns work on both physiological and psychic levels for humans, emerging as the foundation of all of our existence in both the material and energetic world, affecting us at every level in the totality of our MIND-BODY-SPIRIT experience.</p>
 who-its-for:
-  heading_html: If you are a woman who desires to <span class="text-[#fcbe92]">feel</span>...
+  heading_html: Exploring the Feminine Shapes as a Pathway to Healing and Transformation
   description_html: >-
-    <p>Safe in your Body, Safe in your emotions, Safe in the World & Free in your Body, Free in your Emotions, Free in the World… Then you are not alone.</p>
-    <p>If you are a woman who (sometimes) feels…</p>
-    <p>Uncertain, Confused, Anxious, Overwhelmed, Disconnected, And yearning to feel at home in the warm embrace of your own sovereign Body…. Then you are not alone.</p>
-    <p>And if these words resonate with you, then you are probably also a woman who feels…</p>
-    <p>That there is a way home, That there is a spark of light within, That there is an answer hidden inside, That there is Wisdom waiting to be discovered in your own sovereign Body… Then you are in the RIGHT PLACE.</p>
+    <p>Understanding your personal connection to the Non-Linear Pathways will become a beacon of light guiding you in your personal journey of healing and transformation.</p>
+    <p>Whatever meaningful changes you desire in your life, through the intentional self investigation into the Feminine Pathways of your own psyche and body, you will become empowered in your ability to meet these changes with presence and grace.</p>
+    <p>There is no expectation to be perfect. Only to become aware of what lives within you and what needs to be witnessed and reassessed, released and expressed.</p>
+    <p>Through creating a safe space and expertly held container of support and knowledge, you will have the tools and guidance to dance the courageous path of embodied self development.</p>
   background-image:
-    background_image: /uploads/images/women-who-feel-3.png
-    image_focus: right
-    overlay_style: dark
+    background_image: /uploads/images/pathways-of-life-3.jpeg
+    image_focus: 
+    overlay_style: 
 about: 
   description_html: |
     <p><strong>“This is for Women who Feel”</strong> is a Masterclass for women who have a desire to get better at feeling through gaining support, understanding, and applicable tools for their every day life.</p>
@@ -82,8 +80,8 @@ cta:
     <p>“I’m so happy and so enchanted by this. And I wish every woman would take place in this celebration of Femininity, of sisterhood, of aliveness.”</p>
     <p>Want to experience a taste of the Liberation Through Movement magic? Join this unique Masterclass experience “This is for Women who Feel…” on July 8th to experience it yourself!</p>
   button:
-    text: Register Now
-    url: https://manamei.mysamcart.com/checkout/this-is-for-women-who-feel
+    text: Enroll Now
+    url: https://manamei.mysamcart.com/checkout/pathways-of-life-program
   background-image:
     background_image: /uploads/images/manamei-63.jpg
     background-position: 
@@ -100,13 +98,13 @@ seo:
 {% include hero-banner-course.html %}
 
 <!-- Course Description -->
-<section class="p-10p">
+<section class="p-5p m-5p bg-image-style bg-no-repeat bg-contain" style="background-image: url({{ page.course-description.background_image }});">
   <div class="md:text-center">
       <p>{{page.course-description.description_html}}</p>
   </div>
 </section>
 
-<!-- Who It's For -->
+<!-- Description Continued -->
 <section>
   <!-- 2 Columns -->
   <div class="grid md:grid-cols-2">
@@ -122,6 +120,88 @@ seo:
       </div>
     </div>
   </div>
+</section>
+
+<!-- Banner with Testimonial -->
+<section class="mt-10p p-10p bg-image-style bg-overlay medium flex items-center justify-center" style="background-image: url(/uploads/images/manamei-58.jpg);">
+  <div class="lg:w-[80%] text-center italic">
+    ​​“Such a profoundly moving experience…the way this practice combined the embodied experience with the verbal, analytical awareness added such richness. Weaving in the awareness of the deeper meanings behind the circles, spirals, waves, and torus was incredible—like being given a map to something my body already knew but my mind had yet to name. Bringing the intention and the empowerment front and center made every movement feel even more purposeful, like a conversation between the ancient and the present moment.”
+  </div>
+</section>
+
+
+<!-- How It Works -->
+<section class="pt-10p lg:py-10p">
+
+  <!-- Mobile Image (hidden on desktop) -->
+  <!-- <div class="bg-image-style min-h-[60vh] md:min-h-[80vh] my-10p mx-10p md:hidden" style="background-image: url('/uploads/images/manamei-19.jpg');"></div> -->
+
+  <div class="text-center px-5p md:px-10p">
+    <div class="lg:w-[70%] mx-auto mb-12">
+      <h2>This will be a deeply HOLISTIC EXPERIENCE which touches on the Mind-Body-Spirit Harmony of our healing journey.</h2>
+    </div>
+  </div>
+
+  <div class="grid lg:grid-cols-3 gap-12 text-center px-5p md:px-10p">
+
+    <!-- Mind -->
+    <div>
+      <h3 class="font-serif text-2xl mb-4 text-feature">Mind</h3>
+        <p>Theoretical Knowledge on the Origin of the Feminine Pathways and their applicable relationship to our own psyche, delivered during weekly Live Transmissions.</p>
+        <p>Mind-provoking “worksheet” tasks geared to create a foundation of understanding of your own personal relationship to and journey with each shape.</p>
+    </div>
+
+    <!-- Body -->
+    <div>
+      <h3 class="font-serif text-2xl mb-4 text-feature">Body</h3>      
+      <p>Guided Mana Movement Practices focused on embodying the Feminine Pathways as a way to forge the Mind-Body connection to these shapes in relationship to your personal journey, guided live during weekly transmissions.</p>
+      <p>Weekly movement prompts for self exploration of the Feminine Shapes and daily practice to support the deepening of embodied knowledge.</p>
+    </div>
+
+    <!-- Spirit -->
+    <div>
+      <h3 class="font-serif text-2xl mb-4 text-feature">Spirit</h3>
+      <p>Cultivating an unwavering experience of Safety and Freedom through being held in a container of support and non-judgement, focused on authentic expression and shared inspiration.</p>
+      <p>Weekly invitations to share your personal journey, seek support and inspiration from other women around the world, and co-create a powerful experience of sisterhood and connection.</p>
+    </div>
+  </div>
+
+    <!-- CTA -->
+    <div class="flex justify-center mt-8">
+      <a href="{{page.cta.button.url}}" class="button">{{page.cta.button.text}}</a>
+    </div>
+  </div>
+
+  <!-- Mobile Image (hidden on desktop) -->
+  <div class="bg-image-style min-h-[60vh] md:min-h-[80vh] mt-10p mx-10p lg:hidden" style="background-image: url('/uploads/images/manamei-9.jpg');"></div>
+
+  <div class="grid lg:grid-cols-3 gap-8 lg:mt-10p">
+      <!-- Left Column (text) -->
+      <div class="lg:col-span-2 p-10p flex justify-center items-center">
+          <div>
+              <p>This 4-month journey is a time to turn your attention inwards, a time of introspection and connecting deeply with your inner landscape.</p>
+              <p>Each month, you will be invited to devote yourself to your inner work, prioritize YOU and the process of awakening self awareness at all levels.</p>
+              <p>You do this by committing to:</p>
+              <ul class="mb-4 ml-4">
+                <li>Daily pre-recorded embodied movement and somatic dance practices</li>
+                <li>Weekly journaling prompts</li>
+                <li>Weekly live group transmissions with Mana Mei & Guest Facilitators</li>
+                <li>Monthly POD Support Calls</li>
+                <li>1:1 Mentoring calls</li>
+              </ul>
+              <p>Stepping onto this path is stepping into a new way of being. One that prioritizes creating sacred space every day to dive into deep, uninterrupted, vulnerable presence with yourself.</p>
+              <p>Months 1-3 consists of 3 weeks of content, and 1 week of integration.</p>
+              <p>The Integration weeks are intended to be a time when you are free to replenish and nourish your self, catch up on missed lectures and practices, and prepare yourself to step into the next month.</p>
+              <p>Month 4 is a focused training where you will learn to guide an LTM Embodied Dance Journey, as well as the ins-and-outs of Art of Embodied Space Holding & Authentic Facilitation.</p> 
+          </div>
+      </div>
+
+      <!-- Right Column (image) -->
+      <div class="hidden lg:block bg-image-style min-h-[60vh] lg:bg-[bottom]"
+          style="background-image: url('/uploads/images/manamei-11.jpg');">
+      </div>
+  </div>
+
 </section>
 
 
