--- a/pathways-of-life.html
+++ b/pathways-of-life.html
@@ -133,9 +133,6 @@ seo:
 <!-- How It Works -->
 <section class="pt-10p lg:py-10p">
 
-  <!-- Mobile Image (hidden on desktop) -->
-  <!-- <div class="bg-image-style min-h-[60vh] md:min-h-[80vh] my-10p mx-10p md:hidden" style="background-image: url('/uploads/images/manamei-19.jpg');"></div> -->
-
   <div class="text-center px-5p md:px-10p">
     <div class="lg:w-[70%] mx-auto mb-12">
       <h2>This will be a deeply HOLISTIC EXPERIENCE which touches on the Mind-Body-Spirit Harmony of our healing journey.</h2>
@@ -172,6 +169,17 @@ seo:
     </div>
   </div>
 
+</section>
+
+<!-- Testimonial -->
+<section>
+  <div class="lg:w-[70%] mx-auto text-center text-feature italic">
+    <p>“This work is truly profound and left me speechless. All the insights about the circles, the spirals, the waves, and the torus made so much sense - they landed in my system with a sense of hope. They opened a pathway that reminded me: everything starts from me. If the intention is set, movement will unfold. I was able to see, accept, and offer love to my reality in the present moment with no judgement.”</p>
+  </div>
+</section>
+
+<section>
+
   <!-- Mobile Image (hidden on desktop) -->
   <div class="bg-image-style min-h-[60vh] md:min-h-[80vh] mt-10p mx-10p lg:hidden" style="background-image: url('/uploads/images/manamei-9.jpg');"></div>
 
@@ -179,29 +187,28 @@ seo:
       <!-- Left Column (text) -->
       <div class="lg:col-span-2 p-10p flex justify-center items-center">
           <div>
-              <p>This 4-month journey is a time to turn your attention inwards, a time of introspection and connecting deeply with your inner landscape.</p>
+              <h2 class="mb-4">A deeper look into Mana Movement as a powerful tool for integration...</h2>
               <p>Each month, you will be invited to devote yourself to your inner work, prioritize YOU and the process of awakening self awareness at all levels.</p>
-              <p>You do this by committing to:</p>
-              <ul class="mb-4 ml-4">
-                <li>Daily pre-recorded embodied movement and somatic dance practices</li>
-                <li>Weekly journaling prompts</li>
-                <li>Weekly live group transmissions with Mana Mei & Guest Facilitators</li>
-                <li>Monthly POD Support Calls</li>
-                <li>1:1 Mentoring calls</li>
-              </ul>
-              <p>Stepping onto this path is stepping into a new way of being. One that prioritizes creating sacred space every day to dive into deep, uninterrupted, vulnerable presence with yourself.</p>
-              <p>Months 1-3 consists of 3 weeks of content, and 1 week of integration.</p>
-              <p>The Integration weeks are intended to be a time when you are free to replenish and nourish your self, catch up on missed lectures and practices, and prepare yourself to step into the next month.</p>
-              <p>Month 4 is a focused training where you will learn to guide an LTM Embodied Dance Journey, as well as the ins-and-outs of Art of Embodied Space Holding & Authentic Facilitation.</p> 
+              <p>Mana Movement is a powerful embodied movement technique that is founded on the physical and energetic activation of the Feminine Pathways through the entirety of the Body.</p>
+              <p>These shapes—Circles, Spirals, Waves—are the fundamental patterns through which the psyche moves. By mirroring them in our physical movement, we gain access to that deeper layer of reality. This embodied engagement allows us to understand better how these patterns operate within us—and, as a result, learn to navigate life with greater awareness and ease.</p>
+              <p>Mana Movement works on a pre-verbal level, allowing you to integrate experience without needing to define it. The body already knows what is waiting to be released and reintegrated.</p> 
           </div>
       </div>
 
       <!-- Right Column (image) -->
       <div class="hidden lg:block bg-image-style min-h-[60vh] lg:bg-[bottom]"
-          style="background-image: url('/uploads/images/manamei-11.jpg');">
+          style="background-image: url('/uploads/images/pathways-of-life-5.jpg');">
       </div>
   </div>
 
+</section>
+
+
+<!-- Banner with Testimonial -->
+<section class="mt-10p p-10p bg-image-style bg-overlay medium flex items-center justify-center" style="background-image: url(/uploads/images/pathways-of-life-6.jpg); background-position: 50% 30%;">
+  <div class="lg:w-[80%] text-center italic">
+    ​“I love the theory aspect of this topic so much, and feel I really gained a much deeper understanding of the circles, spirals & waves—and how they can be used as a profound tool for doing shadow integration work. Combining this newfound theory with my familiar Mana Movement practice felt like experiencing a whole new aspect of the practice for the first time. I can’t wait to keep expanding on and exploring this.”
+  </div>
 </section>
 
 
