--- a/pathways-of-life.html
+++ b/pathways-of-life.html
@@ -185,7 +185,6 @@ seo:
 </section>
 
 <section>
-
   <!-- Mobile Image (hidden on desktop) -->
   <div class="bg-image-style min-h-[60vh] md:min-h-[80vh] mt-10p mx-10p lg:hidden" style="background-image: url('/uploads/images/manamei-9.jpg');"></div>
 
@@ -241,6 +240,14 @@ seo:
             </div>
         </div>
 
+</section>
+
+
+<!-- Banner with Testimonial -->
+<section class="p-10p bg-image-style bg-overlay medium flex items-center justify-center" style="background-image: url(/uploads/images/pathways-of-life-7.JPG);">
+  <div class="lg:w-[80%] text-center italic">
+    <p>“My tears are falling down while I am writing, but this are tears of transformation and happiness. Thank you so much for this experience.”</p>
+  </div>
 </section>
 
 
