inside the program

--- a/pathways-of-life.html
+++ b/pathways-of-life.html
@@ -43,31 +43,17 @@ investment:
       - list-item_html: Weekly 2-3 Hour Live Group Transmission, guided by Mana Mei & Ka, covering invaluable Theoretical Information PLUS guided embodiment practices to support.<br><span class="text-feature mt-2 inline-block">Weekly Live Transmission will happen on Sundays at 7am PDT - 4pm CET - 10pm Bali, starting on August 31st.</span>
       - list-item_html: Weekly “do-at-home” tasks to deepen your experience and support your personal process, including a “daily dose” movement invitation, brochure about the psychology of shape, and a Self-Inquiry Shape Journaling Worksheet.
       - list-item_html: Exclusive Course Community on Telegram to connect with your global sisterhood, seek support and inspiration, offer a space to hold each other in authenticity and vulnerability, and weekly invitations to share reflections and SHAPES studies!
-  pricing:
-    pay-in-full:
-      heading: Pay in full
-      price: $3,500
-    payment-plan:
-      show: true
-      heading: Payment plan
-      price: $950 x 4 months
-about: 
-  description_html: |
-    <p><strong>“This is for Women who Feel”</strong> is a Masterclass for women who have a desire to get better at feeling through gaining support, understanding, and applicable tools for their every day life.</p>
-    <p>Whether you need help navigating anxiety and overwhelm, or if you need help learning how to express your emotions in a healthy way, this masterclass will support you in RECLAIMING your power within your Emotional Body.</p>
-    <p>Through this Movement Masterclass you will receive in-depth knowledge about the Emotional Body, how to work with it, and get the chance to experience simple, yet potent embodied movement tools and practices that you can apply to your every day experience of life.</p>
-    <p>These tools will support you in navigating your life with more ease and grace, no matter what meets you along your path!</p>
-    <p>Through this masterclass, you will be held in a container of SAFETY and FREEDOM to be guided to take the driver seat of your own healing journey by connecting with the immense wisdom and healing power within your own body.</p>
-  background_image: /uploads/images/women-who-feel-9.png
 inside-the-course:
-  heading_html: Hi, I’m <span class="text-[#fcbe92]">Mana Mei</span>!
+  heading_html: Inside this Program, you will gain invaluable knowledge and experience life-changing embodiment practices that you can apply to your daily life for the rest of your life.
   description_html: >-
-    <p>I am an International Feminine Embodiment Mentor and Facilitator. I have spent the last decade carefully crafting an entire modality of embodied movement practices that are accessible to any woman who is ready to return to wholeness in the Feminine Way - <strong><em>the Liberation Through Movement Model</em></strong></p>
-    <p>Liberation Through Movement has supported <strong><em>thousands</em></strong> of women around the world along their healing journeys by providing a safe space to explore the beautiful, yet complex, inner landscape of our physical and energetic body.</p>
-    <p>I have also worked intimately as personal Feminine Embodiment mentor for over 100 women through my keystone offering- the Liberation Through Movement Mentorship, a life-changing, deeply transformational 3-month Live Online Program! This is my favorite!</p>
+    <p>The tools shared within this program are timeless and always relevant no matter what phase of your journey you are on.</p>
+    <p>Whatever meaningful changes you are desiring in your life, this work will meet you there.</p>
+    <p>The investment to join us in this potent 4-week container, with lifetime access to all course content, where you will be held, guided, and supported every step of the way, is only $160 USD.</p> 
+    <p>Our goal is to make this program accessible and affordable for any woman who feels she can benefit from this work.</p>
+    <p>If you need additional financial support, please email manameilin@gmail.com to ask about our Payment Plan option.</p>
   background-image:
-    background_image: /uploads/images/women-who-feel-4.png
-    image_focus: left
+    background_image: /uploads/images/pathways-of-life-4.jpg
+    image_focus: 
 cta:
   heading: Meet Mana Mei, International Feminine Embodiment Mentor
   description_html: >-
@@ -251,21 +237,8 @@ seo:
 </section>
 
 
-<!-- About this Course -->
-<section>
-  <div class="bg-image-style min-h-[60vh] md:min-h-[80vh] lg:hidden mt-10p" style="background-image: url('{{page.about.background_image}}');"></div>
-  <div class="p-10p">
-    <div>
-      {{page.about.description_html}}
-    </div>
-    <div class="mt-8">
-      <a href="{{page.cta.button.url}}" class="button">{{page.cta.button.text}}</a>
-    </div>
-  </div>
-</section>
-
 <!-- Inside the Course -->
-<section>
+<section class="mt-10p">
 
   <!-- Mobile Image (hidden on desktop) -->
   <div class="bg-image-style min-h-[60vh] md:min-h-[80vh] mt-10p mx-10p lg:hidden" style="background-image: url('{{page.inside-the-course.background-image.background_image}}');"></div>
@@ -274,8 +247,11 @@ seo:
       <!-- Left Column (text) -->
       <div class="lg:col-span-2 p-10p">
           <div>
-              <h2 class="text-[1.5rem] font-medium uppercase mb-2">{{page.inside-the-course.heading_html}}</h2>
+              <h2 class="">{{page.inside-the-course.heading_html}}</h2>
               <p>{{page.inside-the-course.description_html}}</p>
+          </div>
+          <div class="mt-8">
+            <a href="{{page.cta.button.url}}" class="button">{{page.cta.button.text}}</a>
           </div>
       </div>
 
@@ -283,20 +259,6 @@ seo:
       <div class="hidden lg:block bg-image-style min-h-[60vh] lg:bg-[bottom]"
           style="background-image: url('{{page.inside-the-course.background-image.background_image}}');">
       </div>
-  </div>
-
-  <div class="mx-10p">
-    <div class="lg:hidden bg-image-style min-h-[60vh]" style="background-image: url('uploads/images/women-who-feel-10.jpeg');"></div>
-    <div class="lg:text-center my-10p">
-      <div>
-        <p>My hope is that during this Masterclass, I can give you a taste of the sweet nectar of this potent movement medicine and open you up to your own potential to bring movement into your every day life as a powerful tool for healing and transformation.</p>
-        <p>For only a small investment of <strong><em>$19</em></strong>, you have the unique opportunity to join me and your global sisterhood LIVE for this Masterclass to receive powerful embodiment knowledge and practices that will support you in your healing journey for the rest of your life. It is so powerful when we come together to share our energy in these expansive containers that reach around the world…Remember- you are not alone!</p>
-        <p>In the case that you cannot join us live, no worries! Every woman who registers and pays will also receive the recording of the Masterclass which will be available to watch on replay for ONE WEEK after the Masterclass.</p>
-      </div>
-      <div class="mt-8 lg:text-center">
-        <a href="{{page.cta.button.url}}" class="button">{{page.cta.button.text}}</a>
-      </div>
-    </div>
   </div>
 </section>
 
