--- a/pathways-of-life.html
+++ b/pathways-of-life.html
@@ -171,8 +171,8 @@ seo:
 </section>
 
 <!-- Testimonial -->
-<section>
-  <div class="lg:w-[70%] mx-auto text-center text-feature italic">
+<section class="p-10p lg:p-0">
+  <div class="lg:w-[70%] mx-auto text-center text-feature italic mt-10p lg:mt-0">
     <p>“This work is truly profound and left me speechless. All the insights about the circles, the spirals, the waves, and the torus made so much sense - they landed in my system with a sense of hope. They opened a pathway that reminded me: everything starts from me. If the intention is set, movement will unfold. I was able to see, accept, and offer love to my reality in the present moment with no judgement.”</p>
   </div>
 </section>
